--- a/generator/assets/css/_animate.scss
+++ b/generator/assets/css/_animate.scss
@@ -1503,3 +1503,23 @@
   0% { opacity: 0; transform: translateX(10em) rotate(120deg); }
   100% { opacity: 1; transform: translateX(0em) rotate(0deg); }
 }
+
+@-webkit-keyframes flash {
+  0%, 50%, 100% {opacity: 1;}
+  25%, 75% {opacity: 0;}
+}
+
+@-moz-keyframes flash {
+  0%, 50%, 100% {opacity: 1;}
+  25%, 75% {opacity: 0;}
+}
+
+@-o-keyframes flash {
+  0%, 50%, 100% {opacity: 1;}
+  25%, 75% {opacity: 0;}
+}
+
+@keyframes flash {
+  0%, 50%, 100% {opacity: 1;}
+  25%, 75% {opacity: 0;}
+}
