--- a/generator/layouts/_archive_section.html.erb
+++ b/generator/layouts/_archive_section.html.erb
@@ -9,12 +9,10 @@
             <ul class="grid small-block-grid-3 large-block-grid-6">
                 <% archives.each do |archive| %>
                 <li>
-                    <a href=".<%= archive.path %>" data-bottom="transform:rotate(-90deg) scale(.5);opacity:0;transform-origin:-50% 100%" data--150-bottom="transform:rotate(0deg) scale(1);opacity:1">
-                        <h6><%= start_date(archive).strftime("%b") %></h6>
-                        <h3>
-                            <%= start_date(archive).strftime("%d") %>
-                            <span><%= start_date(archive).strftime("%Y") %></span>
-                        </h3>
+                    <a href=".<%= archive.path %>" data-bottom="transform:rotateZ(180deg) rotateY(90deg) scale(0);opacity:0;transform-origin:50% 0" data--150-bottom="transform:rotateZ(0deg) rotateY(0) scale(1);opacity:1">
+                        <div class="month"><%= start_date(archive).strftime("%b") %></div>
+                        <div class="day"><%= start_date(archive).strftime("%d") %></div>
+                        <div class="year"><%= start_date(archive).strftime("%Y") %></div>
                     </a>
                 </li>
                 <% end %>
