--- a/generator/assets/css/icons/fontello.css
+++ b/generator/assets/css/icons/fontello.css
@@ -52,6 +52,6 @@
 
 .icon-mail:before { content: '\e802'; } /* '' */
 .icon-like:before { content: '\e800'; } /* '' */
-.icon-facebook:before { content: '\e801'; } /* '' */
-.icon-twitter:before { content: '\e803'; } /* '' */
+.icon-facebook-2:before { content: '\e801'; } /* '' */
+.icon-twitter-2:before { content: '\e803'; } /* '' */
 .icon-youtube:before { content: '\e804'; } /* '' */
