set footer link relative to current url instead of root <srikanth>

--- a/generator/layouts/_footer_section.html.erb
+++ b/generator/layouts/_footer_section.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="large-12 columns">
             <p><small>
-                <a href="/">Geek Night Chennai</a> sponsored by
+                <a href=".">Geek Night Chennai</a> sponsored by
                 <a rel="nofollow" target="_blank" href="//thoughtworks.com">ThoughtWorks</a><br />
                 Built with
                 <a rel="nofollow" target="_blank" href="//html5boilerplate.com">HTML5 Boilerplate</a>,
