--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -54,10 +54,17 @@
                     <a href="javascript:void(0)">
                         <h4><strike>Participate</strike></h4>
                     </a>
-                    <p>
-                        registrations closed <br />
-                        <small>(sorry, but check out next geek night)</small>
-                    </p>
+                    <% if start_date.future? %>
+                        <p>
+                            registrations not yet open <br />
+                            <small>(please check out in a few days)</small>
+                        </p>
+                    <% else %>
+                        <p>
+                            registrations closed <br />
+                            <small>(sorry, but check out next geek night)</small>
+                        </p>
+                    <% end %>
                 <% end %>
             </div>
             <div class="large-2 columns participate-or-talk">
@@ -65,14 +72,24 @@
                 <h6 class="hide-for-small delimiter">&laquo; or &raquo;</h6>
             </div>
             <div class="large-5 columns talk">
-                <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
-                   onclick="ga('send', 'event', 'talk', 'talk')">
-                    <h4>Talk</h4>
-                </a>
-                <p>
-                    to share exciting new stuff <br />
-                    <small>(accepted for this and subsequent geek nights)</small>
-                </p>
+                <% if item[:participate] %>
+                    <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
+                       onclick="ga('send', 'event', 'talk', 'talk')">
+                        <h4>Talk</h4>
+                    </a>
+                    <p>
+                        to share exciting new stuff <br />
+                        <small>(accepted for this and subsequent geek nights)</small>
+                    </p>
+                <% else %>
+                    <a href="javascript:void(0)">
+                        <h4><strike>Talk</strike></h4>
+                    </a>
+                    <p>
+                        talks not yet open <br />
+                        <small>(please check out in a few days)</small>
+                    </p>
+                <% end %>
             </div>
         </div>
     </section>
