Updated skrollr and followed mobile compatibility instructions

--- a/generator/layouts/_layout.html.erb
+++ b/generator/layouts/_layout.html.erb
@@ -27,6 +27,8 @@
 
     <%= yield %>
 
+    <div id="skrollr-body"></div>
+
     <!-- Google Analytics -->
     <script>
       var _gaq = _gaq || [];
