--- a/generator/assets/css/app.sass
+++ b/generator/assets/css/app.sass
@@ -87,6 +87,12 @@
     h5
       +animate(flipInX, 1s, .5s)
 
+    h5.subheader
+      $subheader-color: darken($alt-fg, 0%)
+      color: $subheader-color
+      font-size: 0.85em
+      margin: 1em 0 0 0
+
   .countdown
     h4
       color: $alt-fg
