--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -7,7 +7,13 @@
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
                 <h1>Geek Night Chennai</h1>
+
                 <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
+
+                <h5 class="subheader">
+                    This Month's Theme: Workshop on Docker and Vagrant <br />
+                    <small>(Note: This month last thursday is election day, so scheduled on last Wednesday)</small>
+                </h5>
             </div>
         </div>
 
@@ -75,7 +81,7 @@
                 <% if item[:participate] %>
                     <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
                        onclick="ga('send', 'event', 'talk', 'talk')">
-                        <h4>Talk</h4>
+                        <h4>Present</h4>
                     </a>
                     <p>
                         to share exciting new stuff <br />
@@ -83,10 +89,10 @@
                     </p>
                 <% else %>
                     <a href="javascript:void(0)">
-                        <h4><strike>Talk</strike></h4>
+                        <h4><strike>Present</strike></h4>
                     </a>
                     <p>
-                        talks not yet open <br />
+                        presentations not yet open <br />
                         <small>(please check out in a few days)</small>
                     </p>
                 <% end %>
