--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -11,7 +11,7 @@
                 <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
 
                 <h5 class="subheader">
-                    This Month's Theme: Workshop on Docker and Vagrant <br />
+                    Hands-on Workshop on Docker and Ansible <br />
                     <small>(Note: This month last thursday is election day, so scheduled on last Wednesday)</small>
                 </h5>
             </div>
