--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -10,10 +10,14 @@
 
                 <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
 
-                <h5 class="subheader">
-                    Hands-on Workshop on Docker and Ansible <br />
-                    <small>(Note: This month last thursday is election day, so scheduled on last Wednesday)</small>
-                </h5>
+                <% if @item[:subheader] %>
+                    <h5 class="subheader">
+                        <%= @item[:subheader] %> <br />
+                        <% if @item[:subnote] %>
+                            <small><%= @item[:subnote] %></small>
+                        <% end %>
+                    </h5>
+                <% end %>
             </div>
         </div>
 
@@ -78,7 +82,7 @@
                 <h6 class="hide-for-small delimiter">&laquo; or &raquo;</h6>
             </div>
             <div class="large-5 columns talk">
-                <% if item[:participate] %>
+                <% if item[:talk] %>
                     <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
                        onclick="ga('send', 'event', 'talk', 'talk')">
                         <h4>Present</h4>
