--- a/generator/assets/css/app.sass
+++ b/generator/assets/css/app.sass
@@ -203,6 +203,9 @@
           color: $alt-fg
         p
           margin-bottom: 0
+        small
+          line-height: 1rem
+          display: inline-block
         img
           display: block
           margin: $paragraph-margin-bottom auto
