--- a/generator/layouts/default.html.erb
+++ b/generator/layouts/default.html.erb
@@ -8,15 +8,15 @@
                 </a>
                 <h1>Geek Night Chennai</h1>
 
-                <h5>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h5>
+                <h6>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h6>
 
                 <% if @item[:subheader] %>
-                    <h5 class="subheader">
-                        <%= @item[:subheader] %> <br />
-                        <% if @item[:subnote] %>
-                            <small><%= @item[:subnote] %></small>
-                        <% end %>
-                    </h5>
+                    <h3 class="subheader">
+                      <%= @item[:subheader] %>
+                    </h3>
+                    <% if @item[:subnote] %>
+                      <div class="subnote"><%= @item[:subnote] %></div>
+                    <% end %>
                 <% end %>
             </div>
         </div>
