--- a/layouts/_header_section.html.erb
+++ b/layouts/_header_section.html.erb
@@ -13,6 +13,9 @@
                 </ul>
                 <ul class="right">
                     <li>
+                      <a href="http://twchennai.github.io/scalaWorkshop">Scala Workshop</a>
+                    </li>
+                    <li>
                     <% if latest[:participate] %>
                         <a href="<%= latest[:participate] %>" target="_blank" rel="nofollow"
                            onclick="ga('send', 'event', 'participate', 'participate')">
