--- a/layouts/_header_section.html.erb
+++ b/layouts/_header_section.html.erb
@@ -13,7 +13,7 @@
                 </ul>
                 <ul class="right">
                     <li>
-                      <a href="http://twchennai.github.io/scalaWorkshop">Scala Workshop</a>
+                      <a href="http://twchennai.github.io/scala">Scala Workshop</a>
                     </li>
                     <li>
                     <% if latest[:participate] %>
