--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -19,12 +19,17 @@
   body
     font-size: 112.5%
 
-=override-colors($main-fg,$main-bg)
+=override-colors($main-fg, $main-bg, $alt-fg)
   color: $main-fg
   background: $main-bg url(../img/white-bg.png)
 
-  h1, h2, h3, h4, h5, h6, .subheader, p, blockquote, a, small
+  h1, h2, h3, h4, h5, h6, .subheader, p, blockquote, small
     color: $main-fg
+
+  a
+    color: $alt-fg
+    &:hover, &:active
+      color: mix($alt-fg, $main-bg, 70%)
 
   code, abbr, acronym
     color: darken($main-fg, 15%)
@@ -68,18 +73,22 @@
   $main-fg: $dark
   $main-bg: $white
   $alt-fg: $blue
-  +override-colors($main-fg,$main-bg)
+  +override-colors($main-fg,$main-bg,$alt-fg)
   border-radius: 0
 
   @media #{$small}
     margin-top: $topbar-height
 
   .logo
-    img
-      display: inline-block
-      margin: 0 auto
-      height: 2em
-      +animate(bounceInLeft, 1s, 0s)
+    .tw-logo
+      display: block
+      &:hover
+        +animate(bounce, 1s)
+      img
+        display: inline-block
+        margin: 0 auto
+        height: 2em
+        +animate(bounceInLeft, 1s, 0s)
 
     h1
       +animate(bounceInRight, 1s, 0s)
@@ -87,16 +96,17 @@
     h6
       +animate(flipInX, 1s, .5s)
 
-    h3.subheader
+    .subheader
       $subheader-color: darken($alt-fg, 0%)
       color: $subheader-color
       margin: 1em 0 0 0
+      +animate(flipInX, 1s, .5s)
 
     .subnote
       line-height: 1.5
       display: block
-      font-size: 0.85em
-
+      font-size: 0.75em
+      +animate(flipInX, 1s, .5s)
 
   .countdown
     h4
@@ -184,7 +194,7 @@
   $main-fg: $dark
   $main-bg: $blue
   $alt-fg: $white
-  +override-colors($main-fg,$main-bg)
+  +override-colors($main-fg,$main-bg,$alt-fg)
 
   .timings
     .row
@@ -204,8 +214,6 @@
       .summary
         position: relative
 
-        a
-          color: $alt-fg
         p
           margin-bottom: 0
         small
@@ -251,7 +259,7 @@
 #location
   $main-fg: $white
   $main-bg: $dark
-  +override-colors($main-fg,$main-bg)
+  +override-colors($main-fg,$main-bg,$main-fg)
   background-image: url(../img/dark-bg.jpg)
 
   .row
@@ -277,7 +285,7 @@
   $main-fg: $white
   $main-bg: $dark
   $alt-fg: $blue
-  +override-colors($main-fg,$main-bg)
+  +override-colors($main-fg,$main-bg,$alt-fg)
   background-image: url(../img/dark-bg.jpg)
 
   .social
@@ -327,9 +335,6 @@
     small
       font-size: $blockquote-cite-font-size
 
-    a
-      color: $alt-fg
-
     cite
       margin: .25em 0
       text-align: right
@@ -341,7 +346,7 @@
   $main-fg: $dark
   $main-bg: $white
   $alt-fg: $blue
-  +override-colors($main-fg,$main-bg)
+  +override-colors($main-fg,$main-bg,$alt-fg)
 
   .grid a
     display: block
@@ -389,7 +394,7 @@
   $main-fg: darken($topbar-bg-color, 30%)
   $main-bg: $topbar-bg-color
   $alt-fg: lighten($blue, 15%)
-  +override-colors($main-fg,$main-bg)
+  +override-colors($main-fg,$main-bg,$alt-fg)
 
   border-radius: 0
   margin-top: 0
