--- a/assets/css/app.sass
+++ b/assets/css/app.sass
@@ -105,7 +105,7 @@
     .subnote
       line-height: 1.5
       display: block
-      font-size: 0.75em
+      font-size: .6em
       +animate(flipInX, 1s, .5s)
 
   .countdown
