--- a/layouts/_header_section.html.erb
+++ b/layouts/_header_section.html.erb
@@ -36,7 +36,7 @@
                     <% if @item == latest %>
                         <li><a href="#location">Location</a></li>
                     <% end %>
-                    <% if archives.any? %><li><a href="#archive">Previous Editions</a></li><% end %>
+                    <li><a href="#archive">All Editions</a></li>
                 </ul>
             </section>
         </nav>
