Modified Geeknight date and attached a form to submit ideas.

--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -83,12 +83,15 @@
                 <% if item[:talk] %>
                     <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
                        onclick="ga('send', 'event', 'talk', 'talk')">
-                        <h4>Present</h4>
+                        <h4>Submit an idea</h4>
                     </a>
                     <p>
-                        to share exciting new stuff <br />
-                        <small>(accepted for this and subsequent geek nights)</small>
+                      Something that you wish to collaborate on.
                     </p>
+                    <!-- <p> -->
+                    <!--     to share exciting new stuff <br /> -->
+                    <!--     <small>(accepted for this and subsequent geek nights)</small> -->
+                    <!-- </p> -->
                 <% else %>
                     <a href="javascript:void(0)">
                         <h4><strike>Present</strike></h4>
