--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -48,46 +48,48 @@
         </div>
 
         <div class="row actions">
-            <div class="large-5 columns participate">
-                <% if item[:participate] %>
-                    <a href="<%= @item[:participate] %>" target="_blank" rel="nofollow"
-                       onclick="ga('send', 'event', 'participate', 'participate')">
-                        <h4>Participate</h4>
-                    </a>
-                    <p>
-                        to learn exciting new stuff <br />
-                        <small>(and to connect with fellow geeks)</small>
-                    </p>
-                <% else %>
-                    <a href="javascript:void(0)">
-                        <h4><strike>Participate</strike></h4>
-                    </a>
-                    <% if start_date.future? %>
-                        <p>
-                            registrations not yet open <br />
-                            <small>(please check out in a few days)</small>
-                        </p>
-                    <% else %>
-                        <p>
-                            registrations closed <br />
-                            <small>(sorry, but check out next geek night)</small>
-                        </p>
-                    <% end %>
-                <% end %>
-            </div>
-            <div class="large-2 columns participate-or-talk">
-                <hr class="show-for-small" />
-                <h6 class="hide-for-small delimiter">&laquo; or &raquo;</h6>
-            </div>
-            <div class="large-5 columns talk">
+            <!-- <div class="large&#45;5 columns participate"> -->
+            <!--     <% if item[:participate] %> -->
+            <!--         <a href="<%= @item[:participate] %>" target="_blank" rel="nofollow" -->
+            <!--            onclick="ga('send', 'event', 'participate', 'participate')"> -->
+            <!--             <h4>Participate</h4> -->
+            <!--         </a> -->
+            <!--         <p> -->
+            <!--             to learn exciting new stuff <br /> -->
+            <!--             <small>(and to connect with fellow geeks)</small> -->
+            <!--         </p> -->
+            <!--     <% else %> -->
+            <!--         <a href="javascript:void(0)"> -->
+            <!--             <h4><strike>Participate</strike></h4> -->
+            <!--         </a> -->
+            <!--         <% if start_date.future? %> -->
+            <!--             <p> -->
+            <!--                 registrations not yet open <br /> -->
+            <!--                 <small>(please check out in a few days)</small> -->
+            <!--             </p> -->
+            <!--         <% else %> -->
+            <!--             <p> -->
+            <!--                 registrations closed <br /> -->
+            <!--                 <small>(sorry, but check out next geek night)</small> -->
+            <!--             </p> -->
+            <!--         <% end %> -->
+            <!--     <% end %> -->
+            <!-- </div> -->
+            <!-- <div class="large&#45;2 columns participate&#45;or&#45;talk"> -->
+            <!--     <hr class="show&#45;for&#45;small" /> -->
+            <!--     <h6 class="hide&#45;for&#45;small delimiter">&#38;laquo; or &#38;raquo;</h6> -->
+            <!-- </div> -->
+            <div class="columns talk">
                 <% if item[:talk] %>
-                    <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow"
-                       onclick="ga('send', 'event', 'talk', 'talk')">
-                        <h4>Submit an idea</h4>
-                    </a>
-                    <p>
-                      Something that you wish to collaborate on.
-                    </p>
+                  <a class="typeform-share" href="https://siliconsenthil.typeform.com/to/BYhKLP" data-mode="2" target="_blank">
+                    <h4>Register</h4>
+                </a>
+                <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+
+                    <!-- <a href="<%= @item[:talk] %>" target="_blank" rel="nofollow" -->
+                    <!--    onclick="ga('send', 'event', 'talk', 'talk')"> -->
+                    <!--     <h4>Submit an idea</h4> -->
+                    <!-- </a> -->
                     <!-- <p> -->
                     <!--     to share exciting new stuff <br /> -->
                     <!--     <small>(accepted for this and subsequent geek nights)</small> -->
