--- a/layouts/_agenda_section.html.erb
+++ b/layouts/_agenda_section.html.erb
@@ -9,7 +9,9 @@
             <div class="large-4 columns time" id="agenda-<%= i %>"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
                  data--200-bottom="transform:rotateX(0) scale(1);opacity:1">
-                <p><%= agenda[:time] %> pm</p>
+                <p>
+                    <%= agenda[:time] %> <%= "pm" unless agenda[:time].ends_with?('m') %>
+                </p>
             </div>
             <div class="large-8 columns summary" data-anchor-target="#agenda-<%= i %>"
                  data-bottom="transform:rotateX(90deg) scale(0);opacity:0"
