--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -95,13 +95,17 @@
                     <!--     <small>(accepted for this and subsequent geek nights)</small> -->
                     <!-- </p> -->
                 <% else %>
-                    <a href="javascript:void(0)">
-                        <h4><strike>Present</strike></h4>
-                    </a>
-                    <p>
-                        presentations not yet open <br />
-                        <small>(please check out in a few days)</small>
-                    </p>
+                  <a class="typeform-share" href="https://siliconsenthil.typeform.com/to/BYhKLP" data-mode="2" target="_blank">
+                  <h4><strike>Register</strike></h4>
+                </a>
+                  <p> Registrations are closed. Please contact geeknight.chennai@thoughtworks.com </p>
+                    <!-- <a href="javascript:void(0)"> -->
+                    <!--     <h4><strike>Present</strike></h4> -->
+                    <!-- </a> -->
+                    <!-- <p> -->
+                    <!--     presentations not yet open <br /> -->
+                    <!--     <small>(please check out in a few days)</small> -->
+                    <!-- </p> -->
                 <% end %>
             </div>
         </div>
