--- a/layouts/_about_section.html.erb
+++ b/layouts/_about_section.html.erb
@@ -17,7 +17,7 @@
 
                 <p data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>It happens on the <b>Last Thursday of every month</b>, unless that's a public holiday or any other unavoidable cause, like an Alien invasion.</small></p>
 
-                <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://docs.google.com/forms/d/1Xb7TWBrMY2rBzbtMKS9Fdnr63nG0C1vV6_mUUO8OT6w/viewform" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
+                <p id="_about" data--100-bottom-top="transform:perspective(400px) rotateX(90deg) scale(.5);transform-origin:50% 0" data--100-bottom="transform:perspective(400px) rotateX(0deg) scale(1)"><small>We love feedback! If you have any suggestions or cribs, feel free to fill out our <a rel="nofollow" href="https://geeknight.typeform.com/to/cZEhey" target="_blank">feedback form</a>. Don't worry, its completely anonymous.</small></p>
 
                 <cite data--100-bottom-top="transform:translateX(100%)" data--100-bottom="transform:translateX(0)">Geek Night Volunteers</cite>
             </blockquote>
