Changes to suit Pune theme

--- a/layouts/_location_section.html.erb
+++ b/layouts/_location_section.html.erb
@@ -7,15 +7,15 @@
         <div class="large-4 columns address" data--100-bottom-top="transform:translateX(-100%)" data--100-bottom="transform:translateX(0)">
             <p>
                 <span>ThoughtWorks Technologies Pvt Ltd</span>
-                <span>9th Floor, Phase 3</span>
-                <span>Ascendas Tech Park</span>
-                <span>Taramani, Chennai</span>
-                <span><small><a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
+                <span>6th Floor,Binarius Building</span>
+                <span>Deepak Complex,National Games Road</span>
+                <span> Shastrinagar, Yerawada,Pune, Maharashtra 411006</span>
+                <span><small><a href="https://www.google.co.in/maps/place/ThoughtWorks+Technologies+India+Pvt+Ltd./@18.555971,73.8919,15z/data=!4m2!3m1!1s0x0:0xcd58a64a848651e5" target="_blank" rel="nofollow">&laquo; Open in Google Maps &raquo;</a></small></span>
             </p>
         </div>
 
         <div class="large-8 columns map" data-anchor-target=".address" data--100-bottom-top="transform:translateX(100%)" data--100-bottom="transform:translateX(0)">
-            <a href="https://maps.google.com/maps?f=q&source=s_q&hl=en&geocode=&q=thoughtworks+chennai&aq=&sll=37.0625,-95.677068&sspn=61.153041,114.169922&vpsrc=0&ie=UTF8&hq=thoughtworks&hnear=Chennai,+Tamil+Nadu,+India&t=m&z=13&iwloc=A&cid=1639595661799347847" target="_blank" rel="nofollow">
+            <a href="https://www.google.co.in/maps/place/ThoughtWorks+Technologies+India+Pvt+Ltd./@18.555971,73.8919,15z/data=!4m2!3m1!1s0x0:0xcd58a64a848651e5" target="_blank" rel="nofollow">
                 <img src="./img/map.png" alt="Map" align="center" />
             </a>
         </div>
