--- a/layouts/preview.html.erb
+++ b/layouts/preview.html.erb
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Geek Night Chennai - Preview</title>
+    <title>Geek Night Pune - Preview</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -20,11 +20,11 @@
     <![endif]-->
 
     <section id="about" class="feature">
-      <h2 class="header">Geek Night Chennai</h2>
+      <h2 class="header">Geek Night Pune</h2>
 
       <div class="content">
         <div class="content-inner">
-          <p>About Geek Night Chennai</p>
+          <p>About Geek Night Pune</p>
         </div>
       </div>
     </section>
