--- a/layouts/_layout.html.erb
+++ b/layouts/_layout.html.erb
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Geek Night Chennai - <%= title %></title>
+    <title>Geek Night Pune - <%= title %></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
