--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -6,7 +6,7 @@
                    onclick="ga('send', 'event', 'tw', 'tw')" class="tw-logo">
                     <img src="./img/tw-logo.png" alt="ThoughtWorks" align="center" />
                 </a>
-                <h1>Geek Night Chennai</h1>
+                <h1>Geek Night Pune</h1>
 
                 <h6>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h6>
 
