--- a/layouts/_agenda_section.html.erb
+++ b/layouts/_agenda_section.html.erb
@@ -31,6 +31,9 @@
                         <%= agenda[:speaker] %>
                     <% end %>
                     </small></p>
+                    <% if agenda[:speaker_profile] %>
+                      <p><small> <%= agenda[:speaker_profile] %> </small></p>
+                    <% end %>
                 <% end %>
                 <% if agenda[:resources] %>
                     <p><small>Resources:
