--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -11,7 +11,7 @@ $base-font-size: 140% !default;
 $body-bg: $white !default;
 $body-font-color: $dark !default;
 $body-font-weight: 300 !default;
-$body-font-family: "Segoe UI Light", Helvetica, "Segoe UI", Arial, sans-serif !default;
+$body-font-family: 'Open Sans', sans-serif !default;
 
 $header-top-margin: 0 !default;
 $header-bottom-margin: .1em !default;
