--- a/layouts/_layout.html.erb
+++ b/layouts/_layout.html.erb
@@ -12,6 +12,8 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" href="css/app.css" />
     <link rel="stylesheet" href="css/icons/fontello.css" />
     <!--[if IE 7]>
