--- a/layouts/archive.html.erb
+++ b/layouts/archive.html.erb
@@ -1,4 +1,4 @@
-<% render '_layout', title: start_date.strftime("%b %Y") do %>
+<% render '/_layout.*', title: start_date.strftime("%b %Y") do %>
     <section id="intro" class="feature">
         <div class="row logo">
             <div class="large-12 columns">
@@ -19,13 +19,13 @@
         </div>
     </section>
 
-    <%= render '_agenda_section' %>
+    <%= render '/_agenda_section.*' %>
 
-    <%= render '_about_section' %>
+    <%= render '/_about_section.*' %>
 
-    <%= render '_archive_section' %>
+    <%= render '/_archive_section.*' %>
 
-    <%= render '_header_section' %>
+    <%= render '/_header_section.*' %>
 
-    <%= render '_footer_section' %>
+    <%= render '/_footer_section.*' %>
 <% end %>
