Testing: added json-ld for the event for google rich card

--- a/layouts/_layout.html.erb
+++ b/layouts/_layout.html.erb
@@ -21,6 +21,9 @@
     <![endif] -->
 
     <script src="js/custom.modernizr.js"></script>
+    <script type="application/ld+json">
+      <%= json_of_event(item) %>
+    </script>
   </head>
   <body>
     <!--[if lte IE 8]>
