--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -1,4 +1,4 @@
-<% render '/_layout.*', title: start_date.strftime("%b %Y") do %>
+<% render '/_layout.*', title: start_date.strftime("%b %Y"), item: @item do %>
     <section id="intro" class="feature">
         <div class="row logo">
             <div class="large-12 columns">
