--- a/layouts/default.html.erb
+++ b/layouts/default.html.erb
@@ -8,7 +8,7 @@
                 </a>
                 <h1>Geek Night Chennai</h1>
 
-                <h6>an open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h6>
+                <h6>An open forum for geeks to connect, discuss &amp; learn latest ideas, technologies and trends in software development</h6>
 
                 <% if @item[:subheader] %>
                     <h5 class="subheader"><%= @item[:subheader] %></h5>
@@ -22,7 +22,7 @@
         <div class="row countdown">
             <div class="small-8 small-offset-2 large-4 large-offset-0 columns date">
                 <p><%= @item[:edition] %><sup><%= @item[:edition].ordinal %></sup> edition</p>
-                <h4><%= start_date.strftime("%b %-d").downcase %></h4>
+                <h4><%= start_date.strftime("%b %-d").upcase %></h4>
             </div>
             <div class="small-6 large-2 columns counter">
                 <h4><span id="days">&nbsp;</span></h4>
